# hive

./: .gitignore  README.md
.docs/: README.md  environment-setup.md  faq.md  quick-start.md
.docs/agents/: README.md
.docs/memory/: README.md
.docs/orchestration/: README.md
.docs/workflows/: README.md
hive/: pyproject.toml
hive/hive/: __init__.py  agents.py  factory.py  memory.py  orchestration.py
src/: runner.py
src/.config/: agents.yml  memory.yml
src/agents/: basic_agent.py  openai_assistant.py  rag_agent.py  tool_agent.py
src/memory/: retrieval.py  semantic.py
src/pipelines/: poem_writer.py
